--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -1,7 +1,12 @@
 /* ================= SERVICE BANNER ================= */
 .sv-banner {
-    height: 420px;
-    overflow: hidden;
+    margin-top: 80px;
+    padding-top: 140px;
+    height: 460px;
+    background-image: url("../img/service-banner.png");
+    background-size: cover;
+    background-position: center;
+    position: relative;
 }
 
 .sv-banner-img {
@@ -42,6 +47,7 @@
     color: #1e73be;
     margin-bottom: 20px;
     font-weight: 600;
+    border-bottom: 1px solid #ccc;
 }
 
 .sv-subtitle {
@@ -57,12 +63,14 @@
 /* IMAGE */
 .sv-image-block {
     margin: 20px 0;
+    margin: 0 auto;
 }
 
 .sv-image-block img {
+    margin: 40px 0;
     width: 100%;
-    height: 260px;
-    object-fit: cover;
+    height: 300px;
+    object-fit: contain;
 }
 
 /* ================= NEWS ================= */
