--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -9,7 +9,7 @@
 /* Breadcrumb */
 .project-breadcrumb {
     background: #f3f3f3;
-    padding: 15px 80px;
+    padding: 10px 30px;
     font-size: 15px;
     color: #333;
 }
@@ -23,8 +23,9 @@
 .content {
     width: 100%;
     display: flex;
+    margin: 0 auto;
     gap: 40px;
-    padding: 40px 80px;
+    padding: 40px 30px;
 }
 
 .content-left {
@@ -51,13 +52,13 @@
     gap: 40px;
     margin-bottom: 60px;
     align-items: center;
-    flex-wrap: wrap;
     flex-direction: row;
+    padding: 10px;
 }
 
 .featured-img img {
-    width: 100%;
-    max-width: 550px;
+    width: 420px;
+    height: 100%;
     border-radius: 10px;
 }
 
@@ -125,29 +126,27 @@
 
 /* Pagination - giống ảnh gốc: số 1 xanh dương */
 .pagination {
-    text-align: center;
-    margin: 50px 0;
+    display: flex;
+    gap: 5px;
+    margin-top: 20px;
 }
 
-.pagination a {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    margin: 0 5px;
-    background: #eee;
-    color: #777;
-    border-radius: 5px;
-    font-weight: bold;
+.page-num {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    border: 1px solid #ddd;
+    color: #666;
+    text-decoration: none;
+    font-size: 13px;
 }
 
-.pagination a.active {
-    background: #0066cc;
-    color: #fff;
-}
-
-.pagination a:hover:not(.active) {
-    background: #ddd;
+.page-num.active {
+    background-color: #003366;
+    color: white;
+    border-color: #003366;
 }
 
 /* Responsive */
