--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,12 +1,14 @@
 /* ================= BANNER ================= */
-.banner {
-    padding-top: 148px;
+.about-banner {
+    width: 100%;
+    margin-top: var(--margin-top-head);
     height: 460px;
     background-image: url("../img/service-banner.png");
     background-size: cover;
     background-position: center;
     position: relative;
     display: flex;
+    overflow: hidden;
 }
 
 .banner-text {
