--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,22 +1,21 @@
-/* ================= SERVICE BANNER ================= */
 .contact-banner {
-    margin-top: 80px;
-    padding-top: 140px;
-    height: 460px;
+    margin-top: var(--margin-top-head);
+    padding-top: 40px;
+    height: 500px;
     background-image: url("../img/service-banner.png");
     background-size: cover;
     background-position: center;
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
-    padding: 20px 20px 40px;
+    padding: 20px 30px 40px;
 }
 
 .contact-breadcrumb {
     background: #f3f3f3;
-    padding: 10px 80px;
+    padding: 10px 30px;
     font-size: 14px;
 }
 
@@ -25,7 +24,8 @@
     color: #333;
 }
 
-.sv-title {
+.contact-title {
+    font-size: 1.6rem;
     color: #1a4388;
     border-bottom: 2px solid #1a4388;
     padding-bottom: 10px;
@@ -36,11 +36,13 @@
     text-align: center;
     color: #1a4388;
     margin-bottom: 40px;
+    line-height: 1.6;
 }
 
 .company-name h3 {
+    margin: 0;
     padding: 6px 0;
-    font-size: 24px;
+    font-size: 2.4rem;
     font-weight: bold;
 }
 
@@ -48,22 +50,25 @@
 .contact-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr; /* Bạn có thể dùng 1fr 1fr 1fr */
-    gap: 20px;
+    gap: 40px;
     margin-bottom: 50px;
+}
+
+.contact-item {
+    height: 480px;
+    background: #f9f9f9;
+    border: 1px solid #eee;
+    border-radius: 6px;
+    overflow: hidden;
 }
 
 .contact-item:hover {
     opacity: 0.6;
 }
 
-.contact-item {
-    background: #f9f9f9;
-    border: 1px solid #eee;
-}
-
 .map-box img {
     width: 100%;
-    height: 200px;
+    height: 300px;
     object-fit: cover;
 }
 
@@ -132,6 +137,7 @@
     border: none;
     cursor: pointer;
     transition: 0.3s;
+    border-radius: 6px;
 }
 
 .form-submit button:hover {
