--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,15 +56,15 @@
 
 .head-lang {
     display: flex;
-    gap: 8px;
 }
 
 .head-lang .fi {
+    margin: auto;
+    padding: 0 4px;
+    border-radius: 6px;
     width: 26px;
-    height: 26px;
-    border-radius: 50%;
+    height: 20px;
     overflow: hidden;
-    border: 1px solid #ddd;
     cursor: pointer;
     transition: transform 0.2s ease;
 }
@@ -78,7 +78,7 @@
     align-items: center;
     gap: 6px;
     padding: 6px 14px;
-    background: #fff5e6;
+
     border-radius: 20px;
     font-weight: 600;
     font-size: 14px;
@@ -86,13 +86,10 @@
 }
 
 .head-phone-icon {
-    width: 14px;
-    height: 14px;
+    width: 34px;
+    height: 34px;
     display: inline-block;
-    background-color: #f39c12;
-
-    mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='white' d='M497.4 361.8l-112-48a32 32 0 0 0-36.9 9.6l-49.6 60.6a352 352 0 0 1-168-168l60.6-49.6a32 32 0 0 0 9.6-36.9l-48-112A32 32 0 0 0 119.4 0H16A16 16 0 0 0 0 16c0 273.1 222.9 496 496 496a16 16 0 0 0 16-16V392.6a32 32 0 0 0-14.6-30.8z'/%3E%3C/svg%3E")
-        no-repeat center / contain;
+    background-color: transparent;
 }
 
 /* Navbar */
